--- a/index.html
+++ b/index.html
@@ -1068,7 +1068,7 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
   <div class="card">
     <h2 class="section-title">Launch Track — “Break the Chain”</h2>
     <p>
-      NOVAK ships with a human voice — a launch track about breaking invisible chains of harm,
+      Ok, the power of AI, and a track and lyrics I made and mixed usuing an AI assistant. — a track about breaking invisible chains of harm,
       bias, and corruption in automated systems.
     </p>
 
