--- a/index.html
+++ b/index.html
@@ -1068,8 +1068,8 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
   <div class="card">
     <h2 class="section-title">Launch Track — “Break the Chain”</h2>
     <p>
-      Ok, the power of AI, and a track and lyrics I made and mixed usuing an AI assistant. — a track about breaking invisible chains of harm,
-      bias, and corruption in automated systems.
+       Power of Math and AI. a track and lyrics I made and mixed usuing an AI assistant — a track about breaking invisible chains of harm,
+      bias, and corruption in automated systems - exacltlyu what I felt like making this.  Lot's of bass, so depending on mood and taste, crank it, don't listen to it, or whatever.
     </p>
 
     <button class="action-btn" style="margin-top:10px;" onclick="toggleSongLyrics()">
