--- a/index.html
+++ b/index.html
@@ -1066,12 +1066,16 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
 
  <!-- SONG: BREAK THE CHAIN -->
   <div class="card">
-    <h2 class="section-title">Launch Track — “Break the Chain”</h2>
+    <h2 class="section-title">“Break the Chain” - AI Assisted song</h2>
     <p>
        Power of Math and AI. a track and lyrics I made and mixed usuing an AI assistant — a track about breaking invisible chains of harm,
-      bias, and corruption in automated systems - exacltlyu what I felt like making this.  Lot's of bass, so depending on mood and taste, crank it, don't listen to it, or whatever.
+      bias, and corruption in automated systems - exacltly what I felt like while making this.
     </p>
 
+    <p>
+    Lot's of bass! So depending on mood and taste adjust volume as appropriate.
+    </p>
+    
     <button class="action-btn" style="margin-top:10px;" onclick="toggleSongLyrics()">
       🎧 Show / Hide Lyrics
     </button>
