--- a/index.html
+++ b/index.html
@@ -1066,7 +1066,7 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
 
  <!-- SONG: BREAK THE CHAIN -->
   <div class="card">
-    <h2 class="section-title">“Break the Chain” - AI Assisted song</h2>
+    <h2 class="section-title">“Break the Chain” - AI Assist with this song</h2>
     <p>
        Power of Math and AI. a track and lyrics I made and mixed usuing an AI assistant — a track about breaking invisible chains of harm,
       bias, and corruption in automated systems - exacltly what I felt like while making this.
