--- a/index.html
+++ b/index.html
@@ -1054,7 +1054,7 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
     </div>
     <br>
     <div class="quote-text">
-        <div class="quote-highlight">Deterministic Execution Integrity</div> — No system may execute without provable truth!
+        <div class="quote-highlight">Deterministic Execution Integrity — No system may execute without provable truth!</div>
     </div>
     <br>
     <span class="quote-author">
