--- a/index.html
+++ b/index.html
@@ -1068,8 +1068,8 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
   <div class="card">
     <h2 class="section-title">“Break the Chain” - AI Assist with this song</h2>
     <p>
-       Power of Math and AI. a track and lyrics I made and mixed usuing an AI assistant — a track about breaking invisible chains of harm,
-      bias, and corruption in automated systems - exacltly what I felt like while making this.
+       Power of Math and AI. This is a track and lyrics I made and mixed usuing an AI assist — it is abouut breaking invisible chains of harm,
+      bias, and corruption in automated systems - exactly what I felt like while making this.
     </p>
 
     <p>
