--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
 <div class="card" style="margin-top:32px;">
   <h2 class="section-title">Why Hasn’t Anyone Built NOVAK Before?</h2>
 
-  <p>NOVAK -- looks obvious once you see it. </p>
+  <p>NOVAK.....looks obvious once you see it. </p>
   
   <p>But here’s the truth:</p>
 
