--- a/index.html
+++ b/index.html
@@ -1069,11 +1069,9 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
  <!-- SONG: BREAK THE CHAIN -->
   <div class="card">
     <h2 class="section-title">“Break the Chain” - AI Assist with this song</h2>
-    <p>
-       Power of Math and AI. This is a track and lyrics I made and mixed usuing an AI assist</p> 
+    <p>Power of Math and AI. This is a track and lyrics I made and mixed usuing an AI assist</p> 
       <p> — it is about breaking invisible chains of harm, bias, and corruption in automated systems</p> 
-       <p>  - exactly what I felt like while making this.
-    </p>
+       <p>  - exactly what I felt like while making this.</p>
 
     <p>
     Lot's of bass! So depending on mood and taste adjust volume as appropriate.
