--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@ html[data-theme="dark"] .aud-btn.active {
   <div style="margin-top:26px;" class="pill-row">
     <button class="pill-btn explain-btn" onclick="showExplain('simple')">🤯 I don't get it</button>
     <button class="pill-btn explain-btn" onclick="showExplain('milkshake')">🥤 Milkshake Analogy</button>
-    <button class="pill-btn explain-btn" onclick="showExplain('pencil')">🖍️ Colored Pencil Analogy</button>
+    <button class="pill-btn explain-btn" onclick="showExplain('pencil')">🖍️ Pencil Analogy</button>
     <button class="pill-btn explain-btn" onclick="showExplain('key')">🔑 Key Analogy</button>
     <button class="pill-btn explain-btn" onclick="showExplain('gov')">🏛 Government Savings</button>
     <button class="pill-btn explain-btn" onclick="showExplain('how')">👁️ Show Me How This Works</button>
