--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@ html[data-theme="dark"] .aud-btn.active {
     <button class="pill-btn explain-btn" onclick="showExplain('milkshake')">🥤 Milkshake Analogy</button>
     <button class="pill-btn explain-btn" onclick="showExplain('pencil')">🖍️ Pencil Analogy</button>
     <button class="pill-btn explain-btn" onclick="showExplain('key')">🔑 Key Analogy</button>
-    <button class="pill-btn explain-btn" onclick="showExplain('gov')">🏛 Government Savings</button>
+    <button class="pill-btn explain-btn" onclick="showExplain('gov')">🏛 Gov Savings</button>
     <button class="pill-btn explain-btn" onclick="showExplain('how')">👁️ Show Me How This Works</button>
   </div>
 
