--- a/index.html
+++ b/index.html
@@ -1051,7 +1051,7 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
 
   <div class="quote-container">
     <div class="quote-text">
-        Asimov gave robots fictional ethics. Turing defined when a machine is allowed to compute. 
+        Asimov gave robots fictional ethics.<br><p> Turing defined when a machine is allowed to compute. </p>
         <br><br>
         <strong>NOVAK defines when a machine is allowed to <span class="quote-highlight">ACT</span></strong> — and forces it to prove it obeyed the law before it does.
     </div>
