--- a/index.html
+++ b/index.html
@@ -678,6 +678,70 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
   </div>
 </div>
 
+<div class="card" style="margin-top:26px;">
+  <h2 class="section-title">What Does This Hash Actually Do?</h2>
+
+  <p>
+    A cryptographic hash is a <strong>digital fingerprint</strong> of whatever you typed or uploaded.
+    It proves the exact content existed in this exact form.
+  </p>
+
+  <h3 style="margin-top:14px;">What a normal person can do with it:</h3>
+
+  <ul style="margin-left:20px; margin-top:10px; line-height:1.55;">
+    <li><strong>Prove “this is the exact thing I had before.”</strong><br>
+        Save the hash somewhere — email, notes app, PDF, ticket, etc.</li>
+
+    <li style="margin-top:10px;"><strong>Later, paste the SAME text/file back in.</strong><br>
+        If the hash <strong>matches</strong> → nothing changed.<br>
+        If it <strong>doesn’t match</strong> → something changed (typo, corruption, fraud, invisible character).</li>
+
+    <li style="margin-top:10px;"><strong>Catch invisible changes.</strong><br>
+        Even a space or dot changes the hash completely — exposing silent edits that steal money,
+        reduce ratings, alter decisions, or manipulate claims.</li>
+
+    <li style="margin-top:10px;"><strong>Anchor a moment in time.</strong><br>
+        “On this date, this exact text existed.” Courts, audits, and oversight can recompute the hash
+        anytime to prove authenticity.</li>
+  </ul>
+
+  <p style="margin-top:16px; font-weight:600;">
+    👉 In short: <strong>Save the hash, compare it later. If it matches, nothing has changed.</strong><br>
+    The hash is your before/after truth anchor.
+  </p>
+</div>
+
+<div class="card" style="margin-top:26px;">
+  <h2 class="section-title">What Can I Actually Do With This Hash?</h2>
+
+  <p>
+    Think of the hash as a <strong>digital fingerprint</strong> — a unique, unforgeable identifier
+    of the exact text or file you verified.
+  </p>
+
+  <ul style="margin-left:20px; margin-top:12px; line-height:1.6;">
+    <li><strong>Copy it and save it somewhere safe.</strong><br>
+        Paste into an email, document, claim note, or evidence file as:<br>
+        <code>NOVAK Integrity Hash (SHA-256): &lt;your hash&gt;</code>
+    </li>
+
+    <li style="margin-top:12px;"><strong>Later, re-run the same text or file.</strong><br>
+        Paste the identical content back into NOVAK.<br>
+        • If the hash <strong>matches</strong> → ✅ nothing changed.<br>
+        • If the hash <strong>differs</strong> → 🟥 content was altered (even by one invisible character).</li>
+
+    <li style="margin-top:12px;"><strong>Use it as mathematical proof.</strong><br>
+        This provides a cryptographic guarantee that the claim, record, log, or file
+        hasn't been silently changed between two points in time.</li>
+  </ul>
+
+  <p style="margin-top:16px;">
+    <strong>In full NOVAK deployments:</strong><br>
+    Systems are <em>not even allowed to act</em> unless the hashes match the last approved truth.
+  </p>
+</div>
+
+  
 <!-- ========================================= -->
 <!-- GPU, Hashing, and Why NOVAK Is Different   -->
 <!-- ========================================= -->
