--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
     <button class="pill-btn" onclick="loadExample('va')">🎖️ VA Disability Claim</button>
     <button class="pill-btn" onclick="loadExample('finance')">💰 Financial Transaction</button>
     <button class="pill-btn" onclick="loadExample('robot')">🤖 Robotics Command</button>
-    <button class="pill-btn" onclick="loadExample('ai')">🧠 AI System Log</button>
+    <button class="pill-btn" onclick="loadExample('ai')">🧠 System Log</button>
     <button class="pill-btn" onclick="loadExample('legal')">⚖️ Legal Filing</button>
     <button class="pill-btn" onclick="openVinModal()">🚗 VIN</button>
   </div>
