--- a/index.html
+++ b/index.html
@@ -741,6 +741,45 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
   </p>
 </div>
 
+  <div class="card" style="margin-top:26px;">
+  <h2 class="section-title">Why Can't I Paste the Hash Back In?</h2>
+
+  <p>
+    A cryptographic hash is a <strong>one-way fingerprint</strong>. 
+    When you paste the <em>hash itself</em> into the box, NOVAK creates a 
+    <strong>new hash of the hash</strong> — it does <em>not</em> recover the original text.
+  </p>
+
+  <p style="margin-top:12px;">
+    That is expected. No cryptographic hash (SHA-256, SHA-512, SHA-3, etc.) is reversible.
+  </p>
+
+  <h3 style="margin-top:16px;">So what do you actually do with a saved hash?</h3>
+
+  <ul style="margin-left:20px; margin-top:10px; line-height:1.6;">
+    <li><strong>Save the hash</strong> somewhere safe (email, PDF, note, claim file).</li>
+
+    <li style="margin-top:10px;">
+      Later, paste the <strong>original text or file</strong> back into NOVAK.
+    </li>
+
+    <li style="margin-top:10px;">
+      If the hash <strong>matches</strong> → nothing changed.<br>
+      If the hash <strong>does not match</strong> → something was changed 
+      (even one invisible character).
+    </li>
+  </ul>
+
+  <p style="margin-top:16px; font-weight:600;">
+    👉 Pasting the hash itself is not the correct way.<br>
+    You always re-verify by re-entering the <strong>original content</strong>.
+  </p>
+
+  <p style="margin-top:8px;">
+    In a full NOVAK deployment, this process is automatic — systems cannot act 
+    unless their current hash matches the last approved truth.
+  </p>
+</div>
   
 <!-- ========================================= -->
 <!-- GPU, Hashing, and Why NOVAK Is Different   -->
