--- a/index.html
+++ b/index.html
@@ -635,6 +635,13 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
     using your device. Nothing is stored, logged, transmitted, or uploaded.
   </p>
 
+  <p>Ok, look at this, if you type TEST, all in capitals, what SHA-256 will say is:</p>
+  <p>TEST  → 94ee059335e587e501cc4bf90613e0814f00a7b08bc7c648fd865a2af6a22cc2</p>
+  <p>Test  → totally different</p>
+  <p>test  → totally different</p>
+  <p>tEsT  → totally different</p>
+
+  
   <textarea id="novakInput"
     placeholder="Example: VA claim, invoice, VIN, contract, JSON, SQL, XML..."
     style="width:100%; height:170px; margin-top:16px; font-family:'JetBrains Mono', monospace;
