--- a/index.html
+++ b/index.html
@@ -637,9 +637,10 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
 
   <p>Ok, look at this, if you type TEST, all in capitals, what SHA-256 will say is:</p>
   <p>TEST  → 94ee059335e587e501cc4bf90613e0814f00a7b08bc7c648fd865a2af6a22cc2</p>
-  <p>Test  → totally different</p>
-  <p>test  → totally different</p>
-  <p>tEsT  → totally different</p>
+  <br>
+  <p>Test  → 532eaabd9574880dbf76b9b8cc00832c20a6ec113d682299550d7a6e0f345e25</p>
+  <p>test  → 9f86d081884c7d659a2feaa0c55ad015a3bf4f1b2b0b822cd15d6c15b0f00a08</p>
+  <p>tEsT  → 876c5e143c421959adff3ed91b82556c433a2f79b6369e70592d2c9dc73455ce</p>
 
   
   <textarea id="novakInput"
