--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
     using your device. Nothing is stored, logged, transmitted, or uploaded.
   </p>
 
-  <p>Ok, look at this, if you type TEST, all in capitals, what SHA-256 will say is:</p>
+  <p>Ok, look at this, if you type TEST, all in capitals, what SHA-256 will say in Cryptographic Hashes below is:</p>
   <p>TEST  → 94ee059335e587e501cc4bf90613e0814f00a7b08bc7c648fd865a2af6a22cc2</p>
   <br>
   <p>Test  → 532eaabd9574880dbf76b9b8cc00832c20a6ec113d682299550d7a6e0f345e25</p>
