--- a/index.html
+++ b/index.html
@@ -671,7 +671,9 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
   <br>
   <p>Ok, look at this, if you type TEST, all in capitals, what SHA-256 will say in Cryptographic Hashes below is:</p>
   <br>
-  <p>TEST  → 94ee059335e587e501cc4bf90613e0814f00a7b08bc7c648fd865a2af6a22cc2</p>
+  <p>TEST  →</p> <div class="hash-box">
+  <span>94ee059335e587e501cc4bf90613e0814f00a7b08bc7c648fd865a2af6a22cc2</span>
+</div>
   <br>
   <p>Test  → 532eaabd9574880dbf76b9b8cc00832c20a6ec113d682299550d7a6e0f345e25</p>
   <p>test  → 9f86d081884c7d659a2feaa0c55ad015a3bf4f1b2b0b822cd15d6c15b0f00a08</p>
