--- a/index.html
+++ b/index.html
@@ -656,35 +656,83 @@ html[data-theme="dark"] .aud-btn.active {
 
   <!-- ✅ PART 2 — Try It + Hash Engine + Example Data + File Drop + VIN + Games -->
 
-<!-- ✅ TRY IT — LIVE HASH INPUT -->
+  <!-- ✅ TRY IT — LIVE HASH INPUT -->
 <div class="card" style="margin-top:38px;">
   <h2 class="section-title">Try It — Prove Integrity Yourself</h2>
-<p style="margin-top:6px; font-size:13px; opacity:0.85;">
-🚫This public demo is for educational purposes only — NOT for HIPAA-regulated environments.
-NOVAK does not collect, store, transmit, or retain data, but user responsibility applies.
-</p>
+
+  <p style="margin-top:6px; font-size:13px; opacity:0.85;">
+    🚫 This public demo is for educational purposes only — NOT for HIPAA-regulated environments.<br>
+    NOVAK does not collect, store, transmit, or retain data; all hashing happens locally on your device.
+  </p>
 
   <p>
-    Type, paste, or modify anything below — NOVAK instantly generates cryptographic hashes locally
-    using your device. Nothing is stored, logged, transmitted, or uploaded.
+    Type, paste, or modify anything below — NOVAK instantly generates real cryptographic hashes 
+    using secure hardware-accelerated WebCrypto on your device. Nothing is stored, logged, transmitted, or uploaded.
   </p>
+
   <br>
-  <p>Ok, look at this, if you type TEST, all in capitals, what SHA-256 will say in Cryptographic Hashes below is:</p>
+
+  <h3 style="font-size:17px; margin-bottom:6px;">How sensitive is a hash?</h3>
+  <p>
+    Look at how a single change — even one <strong>letter</strong> — produces a totally different SHA-256 result.
+  </p>
+
   <br>
-  <p>TEST  →</p> <div class="hash-box">
-  <span>94ee059335e587e501cc4bf90613e0814f00a7b08bc7c648fd865a2af6a22cc2</span>
-</div>
+
+  <!-- Uppercase TEST -->
+  <p><strong>TEST</strong> →</p>
+  <div class="hash-box">
+    <span>94ee059335e587e501cc4bf90613e0814f00a7b08bc7c648fd865a2af6a22cc2</span>
+  </div>
+
   <br>
-  <p>Test  → 532eaabd9574880dbf76b9b8cc00832c20a6ec113d682299550d7a6e0f345e25</p>
-  <p>test  → 9f86d081884c7d659a2feaa0c55ad015a3bf4f1b2b0b822cd15d6c15b0f00a08</p>
-  <p>tEsT  → 876c5e143c421959adff3ed91b82556c433a2f79b6369e70592d2c9dc73455ce</p>
+
+  <!-- Capital T, lower est -->
+  <p><strong>Test</strong> →</p>
+  <div class="hash-box">
+    <span>532eaabd9574880dbf76b9b8cc00832c20a6ec113d682299550d7a6e0f345e25</span>
+  </div>
+
   <br>
-  <p>Change one thing and it all changes</p>
-  
+
+  <!-- All lowercase -->
+  <p><strong>test</strong> →</p>
+  <div class="hash-box">
+    <span>9f86d081884c7d659a2feaa0c55ad015a3bf4f1b2b0b822cd15d6c15b0f00a08</span>
+  </div>
+
+  <br>
+
+  <!-- Mixed case -->
+  <p><strong>tEsT</strong> →</p>
+  <div class="hash-box">
+    <span>876c5e143c421959adff3ed91b82556c433a2f79b6369e70592d2c9dc73455ce</span>
+  </div>
+
+  <br>
+
+  <p>
+    Even invisible changes — a space, newline, tab, punctuation change, or hidden character — will produce
+    a completely different fingerprint. That is how NOVAK detects silent corruption instantly.
+  </p>
+
+  <br>
+
   <textarea id="novakInput"
     placeholder="Example: VA claim, invoice, VIN, contract, JSON, SQL, XML..."
-    style="width:100%; height:170px; margin-top:16px; font-family:'JetBrains Mono', monospace;
-           font-size:14px; padding:12px;"></textarea>
+    style="
+      width:100%; 
+      height:170px; 
+      margin-top:16px; 
+      font-family:'JetBrains Mono', monospace;
+      font-size:14px; 
+      padding:12px;
+      white-space:pre-wrap;
+      overflow-wrap:break-word;
+    ">
+  </textarea>
+</div>
+
 
   <!-- ✅ Hash Algorithm Selector -->
   <div style="margin-top:16px; display:flex; flex-wrap:wrap; gap:18px;">
