--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@ html[data-theme="dark"] .aud-btn.active {
     <button class="pill-btn explain-btn" onclick="showExplain('pencil')">🖍️ Pencil Analogy</button>
     <button class="pill-btn explain-btn" onclick="showExplain('key')">🔑 Key Analogy</button>
     <button class="pill-btn explain-btn" onclick="showExplain('gov')">🏛 Federal Savings</button>
-    <button class="pill-btn explain-btn" onclick="showExplain('how')">👁️ Show Me How This Works</button>
+    <button class="pill-btn explain-btn" onclick="showExplain('how')">👁️ How This Works</button>
   </div>
 
   <!-- ANALOGY OUTPUT -->
