--- a/index.html
+++ b/index.html
@@ -739,8 +739,7 @@ html[data-theme="dark"] .aud-btn.active {
     ">
   </textarea>
   <p style="margin-top:6px; font-size:13px; opacity:0.85;">
-    🚫 This public demo is for educational purposes only — NOT for HIPAA-regulated environments.<br>
-    NOVAK does not collect, store, transmit, or retain data; all hashing happens locally on your device.
+    🚫 This public demo is for educational purposes only — NOT for HIPAA-regulated environments. NOVAK does not collect, store, transmit, or retain data; all hashing happens locally on your device.
   </p>
   </div>
 
