--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@ html[data-theme="dark"] .aud-btn.active {
   <br>
 
   <textarea id="novakInput"
-    placeholder="Example: VA claim, invoice, VIN, contract, JSON, SQL, XML..."
+  placeholder="Please insert text here...Example: VA claim, invoice, VIN, contract, JSON, SQL, XML..."
     style="
       width:100%; 
       height:170px; 
