--- a/index.html
+++ b/index.html
@@ -514,9 +514,9 @@ html[data-theme="dark"] .aud-btn.active {
     </p>
 
     <ul style="margin-left:20px; margin-bottom:14px;">
-      <li><strong>Non-Overridable</strong> — Humans, AI, or malware cannot silently bypass it.</li>
-      <li><strong>Verifiable</strong> — Every decision has a math-checkable receipt.</li>
-      <li><strong>Audit Kernel</strong> — A small, hardened layer that sits beside existing systems and
+      <li>— Humans, AI, or malware cannot silently bypass it.</li>
+      <li>— Every decision has a math-checkable receipt.</li>
+      <li>A small, hardened layer that sits beside existing systems and
           enforces proof-before-action.</li>
     </ul>
 
