--- a/index.html
+++ b/index.html
@@ -468,9 +468,9 @@ html[data-theme="dark"] .aud-btn.active {
     </p>
 
     <ul style="margin-left:20px; margin-bottom:14px;">
-      <li><strong></strong> — Humans, AI, or malware cannot silently bypass it.</li>
-      <li><strong></strong> — Every decision has a math-checkable receipt.</li>
-      <li><strong></strong> — A small, hardened layer that sits beside existing systems and
+      <li><strong></strong>Humans, AI, or malware cannot silently bypass it.</li>
+      <li><strong></strong>Every decision has a math-checkable receipt.</li>
+      <li><strong></strong>A small, hardened layer that sits beside existing systems and
           enforces proof-before-action.</li>
     </ul>
 
