--- a/index.html
+++ b/index.html
@@ -627,16 +627,16 @@ html[data-theme="dark"] .aud-btn.active {
   <h2 class="section-title">Try It — Prove Integrity Yourself</h2>
 
   <br>
-  <p>Ok, look at this, if you type TEST, all in capitals, what SHA-256 will say in Cryptographic Hashes below is:</p>
+  <p>If you type TEST, all in capitals, in the below text field, what SHA-256 will say in Cryptographic Hashes is:</p>
   <br>
   <p>TEST  → 94ee059335e587e501cc4bf90613e0814f00a7b08bc7c648fd865a2af6a22cc2</p>
+  <br>
+  <p>Change one thing and it all changes</p>
   <br>
   <p>Test  → 532eaabd9574880dbf76b9b8cc00832c20a6ec113d682299550d7a6e0f345e25</p>
   <p>test  → 9f86d081884c7d659a2feaa0c55ad015a3bf4f1b2b0b822cd15d6c15b0f00a08</p>
   <p>tEsT  → 876c5e143c421959adff3ed91b82556c433a2f79b6369e70592d2c9dc73455ce</p>
   <br>
-  <p>Change one thing and it all changes</p>
-
   <p>
     Type, paste, or modify anything below — NOVAK instantly generates cryptographic hashes locally
     using your device. Nothing is stored, logged, transmitted, or uploaded.
