--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
   </ul>
 
   <p style="margin-top:16px; font-weight:600;">
-    👉 In short: <strong>Save the hash, compare it later. If it matches, nothing has changed.</strong><br>
+    👉 In short: <strong>Save the hash, compare it later. If it matches, nothing has changed.</strong><br><br>
     The hash is your before/after truth anchor.
   </p>
 </div>
