--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@ html[data-theme="dark"] .aud-btn.active {
   <h2 class="section-title">Try It — Prove Integrity Yourself</h2>
 
   <br>
-  <p>If you type TEST, all in capitals, in the below text field, what SHA-256 will say in Cryptographic Hashes is:</p>
+  <p>If you type TEST, all in capitals, in the below text field, what SHA-256 will say in Cryptographic Hashes area below the example datasets is:</p>
   <br>
   <p>TEST  → 94ee059335e587e501cc4bf90613e0814f00a7b08bc7c648fd865a2af6a22cc2</p>
   <br>
