--- a/index.html
+++ b/index.html
@@ -702,9 +702,8 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
   </p>
 
     <ul style="margin-left:20px; margin-top:10px; line-height:1.55;">
-    <li><strong>Prove “this is the exact thing I had before.”</strong><br>
-        Save the hash somewhere — email, notes app, PDF, ticket, etc.</li>
-    <li><strong>Copy it and save it somewhere safe.</strong><br>
+    <li><strong>Prove “this is the exact thing I had before.”</strong><br></li>
+    <li>Copy it and save it somewhere safe.<br>
         Paste into an email, document, claim note, or evidence file as:<br>
         <code>NOVAK Integrity Hash (SHA-256): &lt;your hash&gt;</code>
     </li>
