--- a/index.html
+++ b/index.html
@@ -769,7 +769,7 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
   </ul>
 
   <p style="margin-top:16px; font-weight:600;">
-    👉 Pasting the hash itself is not the correct way.<br>
+    👉 Pasting the hash itself is not the correct way.<br><br>
     You always re-verify by re-entering the <strong>original content</strong>.
   </p>
 
