--- a/index.html
+++ b/index.html
@@ -1153,17 +1153,18 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
 
   <div class="quote-container">
     <div class="quote-text">
-        Asimov gave robots fictional ethics.<br><br><p> Turing defined when a machine is allowed to compute. </p>
-        <br><br>
+        Asimov gave robots fictional ethics.<br><br>
+      <p> Turing defined when a machine is allowed to compute. </p>
+        <br>
         <strong>NOVAK defines when a machine is allowed to <span class="quote-highlight">ACT</span></strong> — and forces it to prove it obeyed the law before it does.
     </div>
     <br>
     <div class="quote-separator">
-        ---------- That is the difference between science fiction and civilization infrastructure.
+        - That is the difference between science fiction and civilization infrastructure.
     </div>
     <br>
     <div class="quote-text">
-        <div class="quote-highlight">Deterministic Execution Integrity — No system may execute without provable truth!</div>
+        <div class="quote-highlight">Deterministic Execution Integrity - No system may execute without provable truth!</div>
     </div>
     <br>
     <span class="quote-author">
