--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@ html[data-theme="dark"] .aud-btn.active {
 NOVAK does not collect, store, transmit, or retain data, but user responsibility applies.
 </p>
 
-<p style="margin-top:6px; font-size:13px; color:#b91c1c;">
+<p style="margin-top:6px; font-size:13px; opacity:0.85;">
 🚫 Never use real patients, real claims, or real medical documents here — training data only.
 </p>
   
@@ -947,7 +947,7 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
 <div class="card" style="margin-top:22px;">
   <h3 class="section-title" style="font-size:20px;">Verify Any File</h3>
 
-<p style="margin-top:6px; font-size:13px; color:#b91c1c;">
+<p style="margin-top:6px; font-size:13px; opacity:0.85;">
 🚫 Never use real patients, real claims, or real medical documents here — training data only.
 </p>
   <p>
