--- a/index.html
+++ b/index.html
@@ -1078,14 +1078,15 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
           style="margin-top:12px;">
     ▶ Begin Guided Demo
   </button>
-</div>
 
 <!-- ✅ STORY PANEL -->
 <div id="storyPanel"
      class="card"
      style="display:none; margin-top:20px; font-size:15px; line-height:1.6;">
 </div>
-
+<!-- Moved this here -->
+</div>
+  
 <!-- ✅ COMPARISON SECTION -->
 <div class="card"
      style="margin-top:48px; font-size:15px; line-height:1.63;">
