--- a/index.html
+++ b/index.html
@@ -1152,7 +1152,7 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
 <div class="canvas">
   <h1>Deterministic Execution Integrity</h1>
 
-  <div class="quote-container">
+  <div class="card" style="margin-top:36px;">
     <div class="quote-text">
         Asimov gave robots fictional ethics.<br><br>
       <p> Turing defined when a machine is allowed to compute. </p>
