--- a/index.html
+++ b/index.html
@@ -639,9 +639,7 @@ html[data-theme="dark"] .aud-btn.active {
 <!-- Moved this here -->
 </div>
 
-
-
-  <!-- ✅ PART 2 — Try It + Hash Engine + Example Data + File Drop + VIN + Games -->
+<!-- ✅ PART 2 — Try It + Hash Engine + Example Data + File Drop + VIN + Games -->
 
 <!-- ✅ TRY IT — LIVE HASH INPUT -->
 <div class="card" style="margin-top:38px;">
@@ -1277,6 +1275,11 @@ I’M! BOUT! TO! BREAK! THE! CHAIN!
   o7 Star Citizen Referral —
   <a href="https://www.robertsspaceindustries.com/enlist?referral=STAR-KRN7-SJTX"
      target="_blank" rel="noopener noreferrer">STAR-KRN7-SJTX</a><br><br>
+
+  <br>
+  Donations: matthew@novakprotocol.com
+  <br>
+  <br>
 
   Nothing stored, logged, transmitted, analyzed, monitored, sold, or shared.<br>
   100% local, private, client-side cryptographic verification.
