--- a/index.html
+++ b/index.html
@@ -1276,8 +1276,7 @@ I’M! BOUT! TO! BREAK! THE! CHAIN!
   <a href="https://www.robertsspaceindustries.com/enlist?referral=STAR-KRN7-SJTX"
      target="_blank" rel="noopener noreferrer">STAR-KRN7-SJTX</a><br><br>
 
-  <br>
-  Donations: matthew@novakprotocol.com
+  Donations: emailto:matthew@novakprotocol.com
   <br>
   <br>
 
