--- a/index.html
+++ b/index.html
@@ -1812,7 +1812,7 @@ const slides = [
   "Hashes alone don't prevent harm. NOVAK binds data, rules & outputs into a cryptographic execution receipt.",
   "If anything changes — fraud, glitch, bias, breach — NOVAK blocks execution.",
   "Government, healthcare, banking, defense & AI become provably safe and accountable.",
-  "Now try entering text above — NOVAK proves it instantly.",
+  "Now try entering text below — NOVAK proves it instantly.",
   "NOVAK doesn't replace systems — it protects them.",
   "Proof-before-action becomes the new global safety standard."
 ];
