--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@ html[data-theme="dark"] .aud-btn.active {
   <h2 class="section-title">Try It — Prove Integrity Yourself</h2>
 
   <br>
-  <p>If <u>you</u>u> type exaclty <b>TEST</b>, all in capitals, in the below text field, what SHA-256 will ouput in the Cryptographic Hashes area below the example datasets is:</p>
+  <p>If <u>you</u> type exactly <b>TEST</b>, all in capitals, in the below text field, what SHA-256 will ouput in the Cryptographic Hashes area below the example datasets is:</p>
   <br>
   <p>TEST  → 94ee059335e587e501cc4bf90613e0814f00a7b08bc7c648fd865a2af6a22cc2</p>
   <br>
