--- a/index.html
+++ b/index.html
@@ -687,8 +687,7 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
 
 <!-- ✅ EXAMPLE DATASETS -->
 <div class="card" style="margin-top:32px;">
-  <h2 class="section-title">Example Datasets</h2>
-  <p>Select one — it instantly loads into the input above.</p>
+  <p>Example Datasets - Select one — it instantly loads into the input above.</p>
 
 
   <div class="pill-row" style="margin-top:16px;">
