--- a/index.html
+++ b/index.html
@@ -750,8 +750,7 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
     The hash is your before/after truth anchor.
   </p>
   <p style="margin-top:16px;">
-    <strong>In full NOVAK deployments:</strong><br>
-    Systems are <em>not even allowed to act</em> unless the hashes match the last approved truth.
+    <strong>In full NOVAK deployments:</strong> Systems are <em>not even allowed to act</em> unless the hashes match the last approved truth.
   </p>
   </div>
 
