--- a/index.html
+++ b/index.html
@@ -685,8 +685,8 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
 🚫 Never use real patients, real claims, or real medical documents here — training data only.
 </p>
 
-<!-- ✅ EXAMPLE DATASETS
-<!-- <div class="card" style="margin-top:32px;">  -->
+<!-- ✅ EXAMPLE DATASETS  -->
+<div class="card" style="margin-top:32px;">
   <p>Example Datasets - Select one — it instantly loads into the input above.</p>
 
   <div class="pill-row" style="margin-top:16px;">
