--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@ html[data-theme="dark"] .aud-btn.active {
   <!-- ✅ Hash Algorithm Selector -->
   <div style="margin-top:16px; display:flex; flex-wrap:wrap; gap:18px;">
     <label><input type="checkbox" class="hashAlgo" value="SHA-256" checked> SHA-256</label>
-    <label><input type="checkbox" class="hashAlgo" value="SHA-512" checked> SHA-512</label>
+    <label><input type="checkbox" class="hashAlgo" value="SHA-512"> SHA-512</label>
     <label><input type="checkbox" class="hashAlgo" value="SHA-384"> SHA-384</label>
     <label><input type="checkbox" class="hashAlgo" value="SHA3-256"> SHA-3-256</label>
   </div>
