--- a/index.html
+++ b/index.html
@@ -755,6 +755,39 @@ html[data-theme="dark"] .aud-btn.active {
     ▶ Begin Guided Demo
   </button>
 
+<!-- ✅ FOR ENGINEERS / DEEP DOCS -->
+<section class="card" id="engineer-deep-docs" style="margin-top:32px;">
+  <h2 style="display:flex; align-items:center; gap:8px; margin-bottom:12px;">
+    <span>For Engineers, Cryptographers & Auditors</span>
+  </h2>
+
+  <p style="margin-bottom:12px;">
+    Want to see exactly how NOVAK binds <strong>input → rules → output → receipt</strong>?
+    This section links directly into the full standards and threat models.
+  </p>
+
+  <ul style="margin-bottom:18px; padding-left:18px; line-height:1.6;">
+    <li><strong>Cryptography 101:</strong> hashes, HVET, EIR, and RGAC explained in plain engineering terms</li>
+    <li><strong>Standards SP-1–SP-8:</strong> execution integrity, HVET/EIR/RGAC, conformance, certification & adoption</li>
+    <li><strong>Threat Models NTM-1–NTM-3:</strong> internal, AI/automation, and adversarial drift models</li>
+    <li><strong>Adversarial Test Suites & Appendices:</strong> prompt libraries, gradient vectors, multilingual ambiguity matrices</li>
+  </ul>
+
+  <div style="display:flex; flex-wrap:wrap; gap:10px;">
+    <a href="docs/cryptography-101.html" class="action-btn">
+      🔐 Cryptography 101 — Hashes & HVET
+    </a>
+    <a href="standards/" class="action-btn" style="background:#111827;">
+      📘 NOVAK Standards (SP-1–SP-8)
+    </a>
+    <a href="https://github.com/novakprotocol/NOVAK-Hash-Monitor" 
+       class="action-btn" target="_blank" rel="noopener noreferrer">
+      🧬 Full GitHub Repository
+    </a>
+  </div>
+</section>
+
+  
 <!-- ✅ STORY PANEL -->
 <div id="storyPanel"
      class="card"
