--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@ html[data-theme="dark"] .aud-btn.active {
   </ul>
 
   <div style="display:flex; flex-wrap:wrap; gap:10px;">
-    <a href="docs/cryptography-101.html" class="action-btn">
+    <a href="docs/standard/cryptography-101.html" class="action-btn">
       🔐 Cryptography 101 — Hashes & HVET
     </a>
     <a href="standards/" class="action-btn" style="background:#111827;">
